frontend/test/should_fail/no_match_class_in_node.grg
using no_match_class_in_node;

match class mc
{
	n:N;
}

test t implements mc
{
	n:N --> n;
}
